# runda

./: runda.cfg
runda/: Makefile  Makefile.am  Makefile.in  Makefile.train  autogen.sh  config.h  config.status  configure  configure.in  configure~  libtool  mkinstalldirs  runda-config  runda-config.in  runda.iss  runda.iss.in  rundarc  rundarc.in
runda/autom4te.cache/: output.0  output.1  requests  traces.1
runda/doc/: Makefile  Makefile.am  Makefile.in
runda/example/: example.c  example.cpp  example_lattice.c  example_lattice.cpp  thread_test.cpp
runda/man/: Makefile  Makefile.am  Makefile.in  runda.1
runda/misc/: JIS0201.TXT  JIS0208.TXT
runda/python/: RuNda.py  RuNda_wrap.cxx  setup.py  test.py
runda/src/: Makefile  Makefile.am  Makefile.in  Makefile.msvc  Makefile.msvc.in  char_property.cpp  char_property.h  common.h  connector.cpp  connector.h  context_id.cpp  context_id.h  darts.h  dictionary.cpp  dictionary.h  dictionary_compiler.cpp  dictionary_generator.cpp  dictionary_rewriter.cpp  dictionary_rewriter.h  eval.cpp  feature_index.cpp  feature_index.h  freelist.h  iconv_utils.cpp  iconv_utils.h  lbfgs.cpp  lbfgs.h  learner.cpp  learner_node.h  learner_tagger.cpp  learner_tagger.h  librunda.cpp  mmap.h  nbest_generator.cpp  nbest_generator.h  param.cpp  param.h  runda-cost-train.cpp  runda-dict-gen.cpp  runda-dict-index.cpp  (+21 more)
runda/swig/: Makefile  RuNda.i  version.h  version.h.in
runda/tests/: Makefile  Makefile.in
